Fix 360px wrapping

--- a/wp-content/themes/vanguard-history/css/_header.scss
+++ b/wp-content/themes/vanguard-history/css/_header.scss
@@ -14,7 +14,7 @@
 	font-size: 40px;
 
 	.site-title {
-		margin: 0 20px;
+		margin: 0;
 		text-align: center;
 	}
 
@@ -61,6 +61,7 @@
 	.site-branding {
 		.site-title {
 			text-align: left;
+			margin: 0 20px;
 		}
 	}
 	.menu-main-navigation-container {
